--- a/css/styles.css
+++ b/css/styles.css
@@ -14,5 +14,53 @@ body {
     height: 256px;
     position: relative;
     overflow-x: auto;
-    background-image: url('../images/water0.png')
+    background-image: url('../images/water0.png'), url('../images/water1.png');
+}
+
+#ports {
+    width: 0px;
+    margin-top: 96px;
+    display: flex;
+    justify-content: space-around;
+}
+
+#ports > .port {
+    width: 64px;
+    height: 32px;
+    background-image: url('../images/port.png')
+}
+
+#ship {
+    background-image: url('../images/ship.png');
+    width: 128px;
+    height: 64px;
+    position: absolute;
+    display: flex;
+
+}
+
+#sailbutton {
+    font-family: 'Press Start 2P', cursive;
+    position: fixed;
+    max-width: 100%;
+    padding: 10px 20px;
+    margin-top: 70px;
+}
+
+#sailbutton:hover {
+    cursor: pointer;
+}
+
+#sailbutton:focus {
+    background-color: darkslategray
+}
+
+#message {
+    font-family: 'Press Start 2P', cursive;
+    position: absolute;
+    width: 100%;
+    height: auto;
+    padding: 10px 20px;
+    margin-top: 70px;
+    width: 100%
 }
